Use structured concurrency for block runner