@@ -32,7 +32,16 @@
                 <version>3.15.0</version>
                 <configuration>
                     <release>${maven.compiler.release}</release>
+                    <enablePreview>true</enablePreview>
                     <showWarnings>true</showWarnings>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.5.4</version>
+                <configuration>
+                    <argLine>--enable-preview</argLine>
                 </configuration>
             </plugin>
             <plugin>
@@ -54,8 +63,12 @@
                 <configuration>
                     <doclint>all</doclint>
                     <failOnError>true</failOnError>
+                    <release>${maven.compiler.release}</release>
                     <quiet>true</quiet>
                     <show>protected</show>
+                    <additionalOptions>
+                        <additionalOption>--enable-preview</additionalOption>
+                    </additionalOptions>
                 </configuration>
                 <executions>
                     <execution>
